simplify — remove extra not need disallowLock (use `allowLock(false)` instead), reduce `Paths.get` calls
GitOrigin-RevId: eeb9bdfc1c84f6b22421287b059f2c04e6406b9d